feat: add switch

--- a/style.css
+++ b/style.css
@@ -108,18 +108,81 @@ body{
     z-index: 2;
     cursor: pointer;
 }
-.train-togle{
-    width: 50px;
-    height: 30px;
-    background: red;
+.switch{
+    position: relative;
+    display: inline-block;
+    width: 100px;
+    height: 34px;
+    border:1px solid black;
+    border-radius: 5px;
 }
-.menu span{
+
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 5px;
+}
+.train{
+    position: absolute;
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    right: 4px;
+    cursor: pointer;
+    transition: 0.4s;
+}
+.play{
+    position: absolute;
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+    opacity: 0;
+    transition: 0.4s;
+}
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: 0.4s;
+    z-index: 1;
+    border-radius: 5px;
+}
+input:checked + .slider {
+    background-color: #e73827;
+}
+  
+input:checked + .slider:before {
+    transform: translateX(66px);
+}
+
+
+.menu-togle span{
     display: block;
     width: 33px;
     height: 4px;
     margin-bottom: 5px;
     position: relative;
-    background: #e73827;
+    background: #ccc;
+    border:1px solid black;
     border-radius: 3px;
     /* z-index: 2; */
     transition: 0.5s;
